Update CSS and change default password length

--- a/webpages/Password Generator/index.html
+++ b/webpages/Password Generator/index.html
@@ -14,8 +14,9 @@
     <div class="container">
         <h1>Password Generator</h1>
         <input type="text" placeholder="Password">
-        <input type="number" min="0" max="100" value="20" step="1" oninput="showValue(this.value)"
+        <input type="number" min="0" max="100" value="40" step="1" oninput="showValue(this.value)"
             onchange="showValue(this.value)">
+        <div></div>
         <button onclick="generatePassword()">Generate Password</button>
     </div>
 </body>
